# devclean

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dashboard.py  database.py  devin_client.py  main.py  models.py  poller.py  scanner.py  webhook.py
templates/: dashboard.html  setup.html
tests/: conftest.py  test_dashboard.py  test_devin_client.py  test_poller.py  test_webhook.py
